# ion

./: .travis.yml  Cargo.toml  README.md
docs/: Ideas.md
examples/: dep.io  dep2.io  fibonacci.io  function.io  if.io  locals.io  nesting.io  parse_error.io  rectangle.io  return_fn.io  simplified_syntax.io  struct.io  struct_methods.io  struct_nesting.io  struct_rectangle.io  struct_vector.io  vector.io  while.io
failing_examples/: fn_arg.io  function.io
src/: compiler.rs  lexer.rs  lib.rs  main.rs  parser.rs  token.rs  type_checker.rs  types.rs  util.rs  vm.rs
src/sample/: function.io  if.io  parse_error.io  return_fn.io
src/test/: mod.rs  test_type_checker.rs
src/test_input/type_checker/: empty_return.io  fn_arg.io  if_condition.io  local_binary_greater.io  local_binary_plus.io  local_unary_bang.io  move_struct_partially.io  move_with_assignment.io  move_with_function_call.io  move_with_struct_init.io  move_with_variable_declaration.io  multiple_returns.io  no_return.io  non_trait_implementor_struct_passed_as_trait.io  redeclare_struct.io  return_type_void.io  struct_access_assign.io  struct_access_impl.io  struct_access_use.io  struct_impl.io  struct_init_too_many.io  struct_init_wrong_field_name.io  struct_init_wrong_type.io  trait_impl_method_missing.io  trait_impl_type_mismatch.io  trait_implementor_struct_passed_as_trait.io
src/types/: compiler.rs  error.rs  lexer.rs  mod.rs  parser.rs
src/types/type_checker/: function.rs  mod.rs  move_context.rs  protoarena.rs  prototypes.rs  structure.rs  traits.rs  type_name.rs  typing.rs  variable.rs
