[package]
name = "ion"
version = "0.1.0"
authors = ["PhilippGackstatter <philipp.gackstatter@student.tuwien.ac.at>"]
edition = "2018"
default-run = "ion"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparse = "0.2.2"
env_logger = "0.11.3"
log = "0.4.21"
seahash = "4.1.0"
