[package]
name = "ion"
version = "0.1.0"
authors = ["PhilippGackstatter <philipp.gackstatter@student.tuwien.ac.at>"]
edition = "2018"
default-run = "ion"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparse = "0.2.2"
env_logger = "0.11.3"
log = "0.4.21"
seahash = "4.1.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
typed-arena = "2.0.2"

[features]
debug_symbol = []